--- a/_pages/about.html
+++ b/_pages/about.html
@@ -42,9 +42,9 @@ My project on identifying cultural defaults for global climate adaptation will b
     max-width: none;           /* Remove max-width limit */
     width: calc(100% - 20px);  /* Use full width minus small buffer */
     margin: 0;                 /* Reset all margins */
-    margin-left: -30px;        /* Fine-tuned left shift */
-    margin-right: -140px;      /* Extend into right margin */
-    padding: 20px 40px;        /* Horizontal padding for readability */
+    margin-left: -60px;        /* Fine-tuned left shift */
+    margin-right: -180px;      /* Extend into right margin */
+    padding: 20px;        /* Horizontal padding for readability */
     font-size: 18px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
     line-height: 1.6;
